Reformulação de layout

--- a/index.html
+++ b/index.html
@@ -569,7 +569,7 @@
                             <input type="text" class="form-control" placeholder="Email comercial" name="snemail">
                         </div>
                         <div class="col-md-3 col-sm-4">
-                            <button type="submit" class="btn btn-success" name="cmdSignup" value="1"><strong>Enviar email</strong>
+                            <button type="submit" class="btn db-button-color-square " name="cmdSignup" value="1"><strong>Enviar email</strong>
                             </button>
                         </div>
                     </form>
